--- a/BookSearch/app/build.gradle
+++ b/BookSearch/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.0.2"
     defaultConfig {
         applicationId "com.jesperturesson.booksearch"
-        minSdkVersion 19
+        minSdkVersion 14
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -21,5 +21,5 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
 }
